# veille-concu-AMM

./: .env.example  .gitignore  Dockerfile  README.md  SOURCES.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.github/workflows/: deploy.yml  freshness-watchdog.yml  weekly-research.yml
config/: config.yaml
data/: freshness_state.json
docs/: acces_kepro_nl.md  ema_upd_cadrage.md  email_space_eventmaker.md  exemple_sortie_anses.txt
research/: 2026-07-09.md
scripts/: dashboard.py  export_static.py  freshness_watchdog.py  research_sources.py  run.py  start.sh
tests/: test_diff.py  test_phase2.py  test_phase4.py  test_rss.py  test_space.py
tests/fixtures/: ema_upd_products.json
veille/: countries.py  orchestrator.py  schema.py  settings.py
veille/notifier/: base.py  slack.py
veille/sources/: base.py  registry.py
veille/sources/generic/: news_pages.py  rss.py
veille/sources/phase1_regulatory/: anses_anmv.py  bnvf_bangladesh.py  cdsco_inde.py  cucthuy_vietnam.py  ema_upd.py  mcaz_zimbabwe.py  minepia_cameroun.py  nafdac_greenbook.py  nafdac_nigeria.py  onssa_maroc.py  pdf_registry.py  uemoa_siar.py  vmd_kenya.py  zamra_zambie.py
veille/sources/phase2_catalogs/: inovet.py  kepro.py
veille/sources/phase3_salons/: space.py
veille/sources/phase4_rh/: README.md  careers.py  francetravail.py
veille/storage/: base.py  sqlite.py
